# fesvr-simenv

./: README.md  pyproject.toml
SimEnvControl/: app_repo_cli.py  sim_env_cli.py  sim_env_list.py  sim_env_mkgen.py
SimEnvControl/libsimenv/: autocomplete.py  manifest_db.py  shcmd_utils.py
SimEnvControl/libsimenv/makefile_generator/: Makefile.template
