[tool.poetry]
name = "fesvr-simenv"
version = "0.8.0"
description = "Reliably pack and spawn RISC-V workloads as simenvs for riscv-fesvr."
authors = ["Jiayang Li <jli95@ncsu.edu>"]
license = "Other/Proprietary License"
repository = "https://github.com/s117/fesvr-simenv.git"
readme = "README.md"
keywords = ["anycore"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
]
packages = [
    { include = "SimEnvControl" },
    { include = "SyscallAnalysis" },
]
exclude = [
]

[tool.poetry.dependencies]
python = "^3.6.8"
PyYAML = "^6.0"
click = "^8.0.4"
pyparsing = "^3.0.9"
bashlex = "^0.16"
fuzzywuzzy = "^0.18.0"
levenshtein = "^0.20.8"
natsort = "^8.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simenv = "SimEnvControl.sim_env_cli:cli"
app-repo = "SimEnvControl.app_repo_cli:cli"
